hphp/hack/test/ifc/check/nominal_subtyping.php.exp
=== IFC analysis results for nominal_subtyping.php
File "nominal_subtyping.php", line 42, characters 3-35:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "nominal_subtyping.php", line 7, characters 16-22:
  This may be the data source with policy `PRIVATE`
  File "nominal_subtyping.php", line 15, characters 16-18:
  This may be the data sink with policy `PUBLIC`
File "nominal_subtyping.php", line 50, characters 3-35:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "nominal_subtyping.php", line 7, characters 16-22:
  This may be the data source with policy `PRIVATE`
  File "nominal_subtyping.php", line 15, characters 16-18:
  This may be the data sink with policy `PUBLIC`
